[package]
name = "pomotui"
authors = ["Lasse Edslev <lasse2905@gmail.com>"]
repository = "https://github.com/LWEdslev/pomotui"
description = "Pomodoro timer with a flexible TUI"
license = "MIT"
version = "0.1.3"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
tui = "0.19.0"
